# cadquery-mcp-server

./: .gitignore  CLAUDE.md  INTEGRATION_GUIDE.md  README.md  claude_desktop_config.json  evaluate_verify.py  evaluation_results.json  pyproject.toml  requirements.txt  server.py  test_expected_results.json  test_server.py
evaluations/: evaluate_verify.py  evaluation_results.json  latest_evaluation_results.json
evaluations/test_cases/: chair.py  coffee_mug.py  decorative_bowl.py  decorative_sphere.py  donut.py  mushroom_lamp.py  phone_stand.py  puzzle_piece.py  pyramid.py  simple_ring.py  snowman.py  spiral_staircase.py  threaded_bottle.py
evaluations/test_cases/box/: criteria.txt  model.py
evaluations/test_cases/chair/: criteria.txt
evaluations/test_cases/coffee_mug/: criteria.txt
evaluations/test_cases/coffee_mug_v2/: criteria.txt  model.py
evaluations/test_cases/decorative_bowl/: criteria.txt
evaluations/test_cases/decorative_sphere/: criteria.txt
evaluations/test_cases/donut/: criteria.txt
evaluations/test_cases/flower_vase/: criteria.txt  model.py
evaluations/test_cases/functional_gear/: criteria.txt  model.py
evaluations/test_cases/keychain_tag/: criteria.txt  model.py
evaluations/test_cases/mushroom_lamp/: criteria.txt
evaluations/test_cases/organizer/: criteria.txt  model.py
evaluations/test_cases/outputs/model/: model.stl
evaluations/test_cases/pen_holder/: criteria.txt  model.py
evaluations/test_cases/phone_stand/: criteria.txt
evaluations/test_cases/puzzle_piece/: criteria.txt
evaluations/test_cases/pyramid/: criteria.txt
evaluations/test_cases/rounded_cube/: criteria.txt  model.py
evaluations/test_cases/simple_cylinder/: criteria.txt
evaluations/test_cases/simple_ring/: criteria.txt
evaluations/test_cases/snowman/: criteria.txt  model.py
evaluations/test_cases/spiral_staircase/: criteria.txt
evaluations/test_cases/threaded_bottle/: criteria.txt
evaluations/test_cases/triangular_gear/: criteria.txt  model.py
evaluations/test_models/: coffee_mug.py  simple_cylinder.py
src/: __init__.py  generate_png_views.py  openai_verifier.py  render_cad.py  types.py  verify_helper.py
src/ai_3d_print/: __init__.py  openai_verifier.py  render_cad.py  render_svg.py  svg_to_png.py  verify_helper.py  vision_analysis.py
src/ai_3d_print/models/: __init__.py  image_views.py  render_result.py  verification_result.py
src/ai_3d_print/services/: __init__.py  render_service.py  vision_service.py
test_models/: donut.py
tests/: test_openai_verifier.py  test_server.py
